# Archivista

./: .gitignore  CMakeLists.txt  README.md  RELEASE_AUDIT.md  app.rc.in  build-release.bat  debug.bat  main.c
.github/workflows/: release.yml
Header/: app.h  buffer.h  clipboard.h  config.h  cursor.h  editor.h  fileops.h  goto.h  history.h  keyboard.h  main.h  menu.h  miqdar.h  mouse.h  recent.h  render.h  resource.h  scroll.h  search.h  selection.h  shortcuts.h  utils.h  window.h  winproc.h  wordwrap.h  zoom.h
Source/: app.c  buffer.c  clipboard.c  config.c  cursor.c  editor.c  fileops.c  goto.c  history.c  keyboard.c  main.c  menu.c  miqdar.c  mouse.c  recent.c  render.c  scroll.c  search.c  selection.c  shortcuts.c  window.c  winproc.c  wordwrap.c  zoom.c
Source/stack/: stack.c  stack.h
changelogs/: v1.0.1.md  v1.1.0.md  v1.2.0.md
installer/: archivista.iss
